# googlee

./: .gitignore  app.py  pyproject.toml
agents/: agent.py
agents/content/: content_prompt.md
agents/design/: README.md  agent.py
agents/design/prompts/: design_prompt.md  nano_create_prompt.md
agents/design/tools/: create_image.py  edit_image.py
agents/influencer_search/: agent.py  influencer_search_prompt.md
agents/marketing_expert/: agent.py
agents/planner/: agent.py  planner_prompt.md
src/agents/content/: agent.py  content_prompt.md
src/agents/content/.adk/: session.db
src/agents/design/: agent.py
src/agents/design/prompts/: nano_edit_prompt.md  sample_design_edit_prompt.md  sample_design_prompt.md
src/agents/design/tools/: create_image.py  edit_image.py  generate_image.py  list_artifacts.py  list_artifacts_tool.py
src/agents/design/utils/: artifact_utils.py
src/agents/influencer_search/: README.md  agent.py
src/agents/marketing_expert/: agent.py
src/agents/planner/: .env  agent.py  planner_prompt.md
src/agents/planner/.adk/: session.db
static/css/: style.css
static/js/: chat.js
templates/: index.html
